# input-architect

./: .gitignore  LICENSE  README.md  current issues.md  index.html  launch.bat  package-lock.json  package.json  tailwind.config.js
.github/workflows/: build-linux.yml
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/Firmware/: FirmwarePanel.tsx  FirmwareStage.tsx
src/components/Inspector/: ColorPicker.tsx  ConfigHistory.tsx  KeymapFlow.tsx  LEDMatrixControls.tsx  PropertyPanel.tsx  RapidTriggerControl.tsx
src/components/Sidebar/: HelpPanel.tsx  LayerSelector.tsx  ModuleList.tsx  NavigationMenu.tsx
src/components/Stage/: Key.tsx  KeyboardStage.tsx  ModuleRenderer.tsx  VirtualKeyboard.tsx
src/context/: DeviceContext.tsx
src/data/: firmware-catalog.ts  key-presets.ts  mockHardware.ts
src/data/definitions/: framework16.ts  macropad.ts
src/layouts/: MainLayout.tsx
src/services/: ConfigService.ts  HIDService.ts  Logger.ts  SerialService.ts  StorageService.ts
src/types/: via.ts
src/utils/: build-script.ts  color.ts  keyboardLayout.ts  keycodes.ts  uf2.ts
