[package]
name = "input-architect"
version = "0.10.0"
description = "Framework Laptop 16 Keyboard & Macropad Configurator"
authors = ["enkode"]
license = "MIT"
repository = "https://github.com/enkode/input-architect"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
